- Добавил новый компонент в UMenu

--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -1216,3 +1216,200 @@ figure img {
 .u-clr-violet{
     color: #673AB7;
 }
+
+
+/*
+BankCard
+*/
+
+.bank-title {
+    text-align: end;
+}
+
+.bank-card{
+    width: 100%;
+    height: 160px;
+    -webkit-perspective: 600px;
+    -moz-perspective: 600px;
+    perspective:600px;
+
+}
+
+.bank-card__part{
+    box-shadow: 1px 1px #aaa3a3;
+    top: 0;
+    position: absolute;
+    z-index: 1000;
+    left: 0;
+    display: inline-block;
+    width: 320px;
+    height: 190px;
+    background-image: url('../img/android/background/bankBg.png');
+    background-color: #000000;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 8px;
+
+    -webkit-transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -moz-transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -ms-transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -o-transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+
+    zoom: 0.7;
+    margin: 0 19px;
+
+    animation: pulse 5s infinite;
+}
+
+.bank-card__front{
+    padding: 18px;
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+}
+
+.bank-card__back {
+    padding: 18px;
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+}
+
+.bank-card__black-line {
+    margin-top: 5px;
+    height: 38px;
+    background-color: #303030;
+}
+
+.bank-card__logo {
+    height: 16px;
+}
+
+.bank-card__front-logo{
+    position: absolute;
+    top: 18px;
+    right: 18px;
+}
+.bank-card__square {
+    border-radius: 5px;
+    height: 30px;
+}
+
+.bank-card_numer {
+    display: block;
+    width: 100%;
+    word-spacing: 4px;
+    font-size: 20px;
+    letter-spacing: 2px;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.bank-card__space-75 {
+    width: 75%;
+    float: left;
+}
+
+.bank-card__space-25 {
+    width: 25%;
+    float: left;
+}
+
+.bank-card__label {
+    font-size: 10px;
+    text-transform: uppercase;
+    color: rgba(255,255,255,0.8);
+    letter-spacing: 1px;
+}
+
+.bank-card__info {
+    margin-bottom: 0;
+    margin-top: 5px;
+    font-size: 16px;
+    line-height: 18px;
+    color: #fff;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.bank-card__back-content {
+    padding: 15px 15px 0;
+}
+.bank-card__secret--last {
+    color: #303030;
+    text-align: right;
+    margin: 0;
+    font-size: 14px;
+}
+
+.bank-card__secret {
+    padding: 5px 12px;
+    background-color: #fff;
+    position:relative;
+}
+
+.bank-card__secret:before{
+    content:'';
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    height: calc(100% + 6px);
+    width: calc(100% - 42px);
+    border-radius: 4px;
+    background: repeating-linear-gradient(45deg, #ededed, #ededed 5px, #f9f9f9 5px, #f9f9f9 10px);
+}
+
+.bank-card__back-logo {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+}
+
+.bank-card__back-square {
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+}
+
+.bank-card:hover .bank-card__front {
+    /*-webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);*/
+
+}
+
+.bank-card:hover .bank-card__back {
+    /*-webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);*/
+}
+
+@-webkit-keyframes pulsebg {
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(0,0,0, 0.4);
+    }
+    70% {
+        -webkit-box-shadow: 0 0 0 10px rgba(0,0,0, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(0,0,0, 0);
+    }
+}
+@keyframes pulsebg {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(0,0,0, 0.4);
+        box-shadow: 0 0 0 0 rgba(0,0,0, 0.4);
+    }
+    70% {
+        -moz-box-shadow: 0 0 0 10px rgba(0,0,0, 0);
+        box-shadow: 0 0 0 10px rgba(0,0,0, 0);
+    }
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(0,0,0, 0);
+        box-shadow: 0 0 0 0 rgba(0,0,0, 0);
+    }
+}
