--- a/src/components/hud/css/hud.css
+++ b/src/components/hud/css/hud.css
@@ -210,6 +210,7 @@
 }
 
 .speedbox-small {
+    font-family: "Roboto";
     margin-bottom: 2px;
     width: 432px;
     display: flex;
@@ -219,6 +220,7 @@
 }
 
 .speedbox-small .speed-txt {
+    font-family: "Roboto";
     font-size: 34px;
     font-weight: bold;
     margin-right: 8px;
@@ -367,7 +369,7 @@
     background: url('../img/dnlogo.gif') no-repeat;
     background-size: cover;
     margin-top: -28px;
-    margin-right: -40px;
+    margin-right: -30px;
     width: 82px;
     height: 82px;
 }
