- Fix по react-do-log, - Добавлены уведомления - Добавлена рация без взаимодействий.

--- a/src/components/hud/css/hud.css
+++ b/src/components/hud/css/hud.css
@@ -3,6 +3,7 @@
     height: -webkit-fill-available;
     display: flex;
     position: absolute;
+    z-index: -1;
 }
 .hud-position-rightbottom {
     margin-left: auto;
