--- a/src/components/authorization/css/auto.css
+++ b/src/components/authorization/css/auto.css
@@ -84,6 +84,8 @@
     background: url(../img/auth-bg-right.png) no-repeat;
     width: 472px;
     height: 100%;
+    zoom: 101%;
+    background-size: cover;
 }
 .auth-main .content-main {
     width: inherit;
@@ -123,7 +125,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 209px;
+    height: 62%;
+    /* margin-top: 209px; */
 }
 .auth-input input.auth-input-style {
     width: 480px;
@@ -139,7 +142,7 @@
     border-bottom: 1px solid rgb(62, 181, 241);
 }
 .auth-input input.auth-input-style:first-child {
-    margin-bottom: 167px;
+    margin-bottom: 122px;
 }
 .auth-input input::placeholder{    
     font-size: 22px;
@@ -159,6 +162,7 @@ input:focus::-webkit-input-placeholder {
     background: #3eb5f1;
     box-shadow: 0px 0px 14.24px 1.76px rgba(0, 0, 0, 0.2);
     margin-bottom: 140px;
+    margin-top: auto;
     display: flex;
     justify-content: center;
     align-items: center;
