--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -99,3 +99,11 @@
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
   }
+  @font-face {
+    font-family: 'Square Dot-Matrix';
+    src: local('Square Dot-Matrix'), 
+    local('Square Dot-Matrix'),
+    url('Square-Dot-Matrix.ttf')format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
