--- a/src/components/authorization/css/auto.css
+++ b/src/components/authorization/css/auto.css
@@ -125,8 +125,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 62%;
-    /* margin-top: 209px; */
+    /* height: 62%; */
+    margin-top: 209px;
 }
 .auth-input input.auth-input-style {
     width: 480px;
@@ -142,7 +142,8 @@
     border-bottom: 1px solid rgb(62, 181, 241);
 }
 .auth-input input.auth-input-style:first-child {
-    margin-bottom: 122px;
+    /* margin-bottom: 122px; */
+    margin-bottom: 167px;
 }
 .auth-input input::placeholder{    
     font-size: 22px;
@@ -162,7 +163,7 @@ input:focus::-webkit-input-placeholder {
     background: #3eb5f1;
     box-shadow: 0px 0px 14.24px 1.76px rgba(0, 0, 0, 0.2);
     margin-bottom: 140px;
-    margin-top: auto;
+    /* margin-top: auto; */
     display: flex;
     justify-content: center;
     align-items: center;
