--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -308,7 +308,7 @@
     height: 48px;
 }
 .u-title {
-    height: 40px;
+    height: 41px;
     display: flex;
     align-items: center;
     background: #212121;
@@ -1504,4 +1504,237 @@ BankCard
 
 .MuiTableCell-body {
     white-space: pre-wrap;
+}
+.messenger-main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    transition: 0.3s;
+    background: #1D2733;
+    overflow: scroll;
+    padding-top: 8px;
+    flex-direction: column;
+}
+.clm-reverse-chat {
+    flex-direction: column-reverse;
+}
+.m-box-messeng {
+    width: 77%;
+    font-family: "SF Compact Display Medium";
+    font-style: normal; 
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 10px;
+    border-bottom: 0.5px solid #0D1117;
+}
+.m-box-clm-mes {
+    width: 81%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.m-box-sms {
+    width: 99%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 8px;
+}
+.m-img-sms {
+    width: 41px;
+    height: 41px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 8px;
+    margin-right: 16px;
+}
+.m-img-sms-title {
+    width: 30px !important;
+    height: 30px !important;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.mes-title {
+    color: #E9EEF4;
+    margin-bottom: 6px;
+}
+.mes-text {
+    max-height: 30px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    color: #7D8B97;
+    margin-bottom: 4px;
+}
+.m-time{
+    font-family: "SF Compact Display Medium";
+    color: #7D8B97;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: right;
+}
+.m-crl-box {
+    width: 20px;
+    height: 20px;
+    background: #64AFE9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 12px;
+    border-radius: 10px;
+    margin-top: auto;
+    margin-left:  auto;
+}
+.m-box-clm-info {
+    display: flex;
+    flex-direction: column;
+    width: 14%;
+}
+.dedbit-menu {
+    width: inherit;
+    height: 412px;
+    display: flex;
+    flex-direction: column;
+    margin-top: -1px;
+    width: 101%;
+    margin-left: -1px;    
+}
+.dedbit-title-name {
+    font-family: "SF Compact Display Medium";
+    color: #fff;
+    font-size: 14px;
+    text-align: left;
+}
+.dedbit-title-text{
+    font-family: "SF Compact Display Thin";
+    color: #7D8B97;
+    font-size: 11px;
+    text-align: left;
+}
+.dedbit-u-texttittle {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 10px;
+}
+.ded-messenge {
+    max-width: 229px;
+    min-width: 138px;
+    width: 100%;
+    box-sizing: border-box;
+    /* min-height: 20px; */
+    font-family: "Roboto"; /* либо "SF Compact Display Medium"*/
+    font-size: 14px;
+    display: flex;
+    margin-bottom: 4px; 
+    position: relative;  
+}
+.testmes {
+    min-height: 20px;
+    padding-left: 6px;
+    padding-top: 8px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    box-sizing: border-box;
+}
+.block-sms-ded {
+    /* min-width: 138px; */
+    padding-bottom: 6px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    word-break: break-word;
+    
+    
+}
+.ded-vxod {
+    background: #212D3B;
+    margin-left: 6px;
+    border-radius: 3px 6px 6px 3px;
+}
+.ded-isxod {
+    background: #3B628D;
+    margin-left: auto;
+    margin-right: 6px;
+    border-radius: 6px 3px 3px 6px;
+}
+.ded-isxod .block-sms-info-time {
+    right: 10px;
+}
+.ded-vxod .block-sms-info-time {
+    right: 10px;
+}
+.block-sms-info-time {
+   color:#ffffff2e;
+   font-size: 12px;
+   margin-top: auto;
+   margin-left: auto;
+   /* margin-bottom: 3px;
+   margin-right: 5px; */
+   font-family: 'SF Compact Display Thin';
+   position: absolute;
+    bottom: 3px;
+}
+.isxod-left {
+    margin-left: auto;
+}
+.ded-isxod .block-sms-info-time {
+    color: #ffffff5e;
+}
+.hide-time {
+    font-size: 12px;
+    margin-left: 5px;
+    display: inline;
+    opacity: 0;
+    color:#ffffff2e;
+    margin-top: auto;
+    margin-left: auto;
+    /* margin-bottom: 3px;
+    margin-right: 5px; */
+    font-family: 'SF Compact Display Thin';
+     bottom: 3px;
+}
+.ded-meta-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+.dedmeta-text {
+    font-family: "SF Compact Display Medium";
+    background: #00000033;
+    padding: 0 6px;
+    font-size: 12px;
+    line-height: normal;
+    height: 20px;
+    border-radius: 12px;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ded-input-text {
+    width: 100%;
+    height: 34px;
+    background: #212D3B;
+    display: flex;
+    align-items: center;
+    padding-left: 6px;
+}
+.ded-text-ipn {
+    color:#e0e0e0;
+    font-size: 14px;
+    font-family: "SF Compact Display Medium";
+    margin-left: 6px;
+    width: 75%;
+    margin-right: 6px;
+}
+.ded-text-ipn::-webkit-input-placeholder {
+    color:#7D8B97;
 }
