--- a/src/components/modalinput/css/modalinput.css
+++ b/src/components/modalinput/css/modalinput.css
@@ -1,3 +1,6 @@
+/* body {
+    background-color: #9a3f3f;
+} */
 .position-modal{
     width: -webkit-fill-available;
     height: -webkit-fill-available;
@@ -5,10 +8,11 @@
     position: absolute;    
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 .main-input-modal {
     width: 579px;
-    min-height: 91px;
+    min-height: 66px;
     background: rgba(14, 14, 14, 0.8);
     position: relative;
     display: flex;
@@ -43,20 +47,22 @@
     font-weight: normal;
     font-size: 16px;
     color: #FFFFFF;
-    margin-top: 7px;
+    margin-top: 9px;
     margin-left: 20px;
 }
 .modal-b-input {
     max-width: 540px;
     max-height: 795px;
-    min-height: 34px;
+    min-height: 25.9782px;
+    height: 25.9782px;
     min-width: 540px;
     background: #151515 !important;
     border: 1px solid #3e3e3e !important;
     box-sizing: border-box;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
     margin-left: 20px;
-    margin-top: 13px;
+    margin-top: 10px;
+    padding: 5px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: normal;
@@ -65,4 +71,24 @@
     outline: none;
     margin-bottom: 18px !important;
     resize: none;
+}
+.modal-box-input {
+    width: 579px;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row-reverse;
+}
+.modal-btn {
+    width: 109.02px;
+    height: 24.37px;
+    background: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'HACKED';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    color: #000000;
+    margin-left: 2px;
 }
