--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -83,6 +83,12 @@
     font-weight: 400;
     src: url(flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
   }
+  @font-face {
+    font-family: 'Choujikuu Yousai - Macross';
+    font-style: normal;
+    font-weight: normal;
+    src: url(17808.otf) format('otf');
+  }
   
   .material-icons {
     font-family: 'Material Icons';
